--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,15 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // added text detection models //
+
+    // To recognize Latin script
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta6'
+
+    implementation 'com.google.mlkit:text-recognition-devanagari:16.0.0-beta6'
+    implementation 'com.google.mlkit:text-recognition-japanese:16.0.0-beta6'
+    implementation 'com.google.mlkit:text-recognition-korean:16.0.0-beta6'
+
+    // end of adding text detection models //
 }
