--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   audioplayers: ^3.0.1
   image_cropper: ^3.0.1
 
-  google_ml_kit: ^0.13.0
+  google_mlkit_text_recognition: ^0.5.0
 
 dev_dependencies:
   flutter_test:
