--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
   #additional project-based plugins
   camera: ^0.10.3+2
-  image_picker: ^0.8.4+4
+  image_picker: ^0.8.7
 
   audioplayers: ^3.0.1
   image_cropper: ^3.0.1
