--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_cropper: ^3.0.1
 
   google_mlkit_text_recognition: ^0.5.0
+  translator: ^0.1.7
 
 dev_dependencies:
   flutter_test:
