--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
 
   google_mlkit_text_recognition: ^0.5.0
   translator: ^0.1.7
+  flutter_tts: ^3.6.3
 
   edge_detection: ^1.0.5
   path_provider:
